syntax = "proto3";

option go_package = "./proto";
package proto;

service UserService {
    rpc CreateUser(CreateUserRequest) returns (UserResponse);
    rpc GetUser(GetUserRequest) returns (UserResponse);
    rpc GetUsers(GetUsersRequest) returns (UsersResponse); 
    rpc UpdateUser(UpdateUserRequest) returns (UserResponse); 
    rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
}

message CreateUserRequest {
    string name = 1;
    string username = 2;
    string email = 3;
    string password = 4;
    string phone = 5;
    string role = 6;
}

message GetUserRequest {
    string id = 1;
}

message GetUsersRequest {
}

message UserResponse {
    string id = 1;
    string name = 2;
    string username = 3;
    string email = 4;
    string phone = 5;
    string role = 6;
    string createdAt = 7;
    string updatedAt = 8;
}

message UsersResponse {
    repeated UserResponse users = 1;
}

message UpdateUserRequest {
    string id = 1;
    string name = 2;
    string username = 3;
    string email = 4;
    string phone = 5;
    string role = 6;
}

message DeleteUserRequest {
    string id = 1;
}

message DeleteUserResponse {
    string id = 1;
    bool success = 2;
}
